force-app/main/default/objects/JBCXM__OpportunityFieldMap__c/JBCXM__OpportunityFieldMap__c.object-meta.xml
<CustomObject>
    <description>This object holds the Mapping information between Opportunity fields and JBara TransHeader and JBara TransLines objects.</description>
    <label>Opportunity Field Map</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Field Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>