force-app/main/default/objects/JBCXM__OpportunityFieldMap__c/fields/JBCXM__Defaults__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Defaults__c</fullName>
    <description>Default data to be used for required fields in Opportunity</description>
    <inlineHelpText>Default data to be used for required fields in Opportunity</inlineHelpText>
    <label>Defaults</label>
    <length>255</length>
    <type>Text</type>
</CustomField>