force-app/main/default/objects/JBCXM__OpportunityFieldMap__c/fields/JBCXM__JBaraField__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__JBaraField__c</fullName>
    <description>The JBara Header Field or item that is mapped</description>
    <inlineHelpText>The JBara Header Field or item that is mapped</inlineHelpText>
    <label>JBara Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>