force-app/main/default/objects/JBCXM__OpportunityFieldMap__c/fields/JBCXM__MapRules__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MapRules__c</fullName>
    <description>This contains the map rules against booking types.</description>
    <label>Map Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>