force-app/main/default/objects/JBCXM__OpportunityFieldMap__c/fields/JBCXM__OpportunityField__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OpportunityField__c</fullName>
    <description>The opportunity field that is mapped</description>
    <inlineHelpText>The opportunity field that is mapped</inlineHelpText>
    <label>Opportunity Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>