force-app/main/default/objects/JBCXM__OpportunityFieldMap__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <description>The type of the mapping field that specifies if the mapping is related to JBara TransHeader of the JBara TransLines Objects. There are also be Opportunity Fields that are required but are not mapped to JBara objects. In this case provide a Default value</description>
    <inlineHelpText>The type of the mapping field that specifies if the mapping is related to JBara TransHeader of the JBara TransLines Objects. There are also be Opportunity Fields that are required but are not mapped to JBara objects. In this case provide a Default value</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JBara Header Field</fullName>
            </value>
            <value>
                <fullName>JBara Line Item</fullName>
            </value>
            <value>
                <fullName>Booking Type</fullName>
            </value>
            <value>
                <fullName>Opportunity Required Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>